# apt

./: configure.ac
apt-pkg/: luaiface.cc
apt-pkg/rpm/: rpmhandler.cc  rpmhandler.h  rpmsystem.cc  rpmversion.cc
cmdline/: apt-cache.cc  apt-cdrom.cc  apt-config.cc  apt-get.cc  apt-shell.cc
contrib/apt-files/: README
contrib/apt-groupinstall/: groupinstall-backend-suse
contrib/apt-wrapper/: apt  apt-rpm  apt-rpm.1  apt.1  apt.1.xml  apt.ent
doc/: apt-cache.8  apt-cdrom.8  apt-config.8  apt-get.8  apt.8  apt.conf.5  apt.ent  apt_preferences.5  sources.list.5  vendors.list.5
luaext/: lposix.c  lrexlib.c
methods/: Makefile.am  gpg.cc  https.cc
po/: Makevars  de_DE.po  es_ES.po  it_IT.po  ja.po  pt_BR.po  pt_PT.po  ru.po
tools/: Makefile.am  genbasedir  rpmdb-selftest.cc
